Fixed alignment issue and img src change on avatar upload on header dropdown

--- a/static/manage/css/global.1.5.css
+++ b/static/manage/css/global.1.5.css
@@ -155,12 +155,14 @@ div#header-right {
 	float:right;
 	padding: 0 15px;
 	width: 180px;
+	background:red;
 }
 
 div#header-right > a {
     height: 100%;
 	color:#888;
     display: inline-block;
+    float:right;
 }
 
 div#header-right:hover > a {
@@ -224,6 +226,7 @@ span#account-name{
 	font: bold 15px/32px 'Cabin', sans-serif;
 	margin:0 2px 0 4px;
 	vertical-align:middle;
+	background: green;
 }
 
 div#content-frame{
